fakechroot (2.6-1) unstable; urgency=low

  * New environment variable FAKECHROOT_EXCLUDE_PATH.
  * Fix getcwd(3) function. Closes: #410145, #410739.
  * Fix readlink(2) function. Closes: #412141.
  * The chroot(2) function is now recursive and allows nested chroots.
    Closes: #412603.
  * Updated manpage.

 -- Piotr Roszatycki <dexter@dandelion>  Fri,  4 May 2007 19:41:47 +0200

fakechroot (2.5-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply patch from Andreas Jochens <aj@andaco.de> to build-dep on 
    libc6-dev-i386 instead of the obsolete ia32-libs-dev on amd64. (Closes:
    #360434)

 -- Marc 'HE' Brockschmidt <he@debian.org>  Sat, 16 Sep 2006 12:08:27 +0200

fakechroot (2.5-1) unstable; urgency=low

  * Relicensed to LGPL
  * configure script regenerated with libtool 2.1a (2005-10-24).

 -- Piotr Roszatycki <dexter@debian.org>  Mon, 24 Oct 2005 09:13:55 +0200

fakechroot (2.4-1) unstable; urgency=low

  * Convert to non native Debian package.
  * New option --use-system-libs as a workaround if the system dynamic
    linker can't load the libc.so from fake chroot.
  * Fix revoke(2) function.
  * Load symbols on demand, so fakechroot is compatible with libselinux.
  * Support RedHat EL 4 (and CentOS, and Whitebox, etc.)
  * Updated manual page.
  * Configure script regenerated with libtool 2.1a. The source should be
    more portable and does not require C++ compiler installed.

 -- Piotr Roszatycki <dexter@debian.org>  Thu,  8 Sep 2005 17:54:15 +0200

fakechroot (2.3) unstable; urgency=low

  * Initial port to FreeBSD 5.x.
  * Implement <fts.h> and <ftw.h> functions.
  * New configure option --with-libpath.
  * Link with -avoid-version option.

 -- Piotr Roszatycki <dexter@debian.org>  Tue,  6 Sep 2005 16:54:35 +0200

fakechroot (2.2) unstable; urgency=low

  * Included config.h, so GLIBC 2.3 functions works now.
  * Initial port to Solaris 8.

 -- Piotr Roszatycki <dexter@debian.org>  Fri,  2 Sep 2005 16:55:29 +0200
